# documents-llm

./: .env-ollama  .env-openai  LICENSE  README.md  doc_app.py  documents.ipynb  pyproject.toml  query.py  summarize.py
documents_llm/: document.py  query.py  st_helpers.py  summarize.py
